--- a/config.json.sample
+++ b/config.json.sample
@@ -3,5 +3,11 @@
     "consumerSecret": "ConsumerSecret",
     "accessToken": "AppAccessToken",
     "accessTokenSecret": "AppAccessKey",
-    "callback" : ""
+    "callback": "",
+    "searchQuery": "#searchForThisHashag",
+    "photoTweetsOnly": true,
+    "replyWith" : [
+    	"Hey $SCREEN_NAME$, thanks for the shout out!",
+    	"Looking good $SCREEN_NAME$!"
+    ]
 }
