--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "nconf": "^0.8.2",
-    "node-twitter-api": "^1.6.1"
+    "node-twitter-api": "^1.6.1",
+    "redis": "^2.2.3"
   }
 }
