--- a/config.json.sample
+++ b/config.json.sample
@@ -9,5 +9,9 @@
     "replyWith" : [
     	"Hey $SCREEN_NAME$, thanks for the shout out!",
     	"Looking good $SCREEN_NAME$!"
+    ],
+    "excludeScreenNames" : [
+        "DontIncludeMe",
+        "OrMe"
     ]
 }
