Dynamic redis prefixes

--- a/config.json.sample
+++ b/config.json.sample
@@ -4,6 +4,7 @@
     "accessToken": "AppAccessToken",
     "accessTokenSecret": "AppAccessKey",
     "callback": "",
+    "redisPrefix": "hashtag-responder:",
     "searchQuery": "#searchForThisHashag",
     "photoTweetsOnly": true,
     "replyWith" : [
